# devpulse

./: .gitignore  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
src/devpulse/: __init__.py  cli.py  client.py  config.py  renderer.py  tui.py
tests/: test_client.py  test_config.py  test_renderer.py
