[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devpulse"
version = "0.1.0"
description = "Your GitHub activity dashboard in the terminal."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.25.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "textual>=0.60.0",
]

[project.scripts]
devpulse = "devpulse.cli:app"
devpulse-ui = "devpulse.tui:run"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "textual-dev>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/devpulse"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
